--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Kunal Patel <https://github.com/kpatel122>
 sentence=Non blocking variable speed servo control
 paragraph=Currently only supports STM32 on arduino
 category=Device Control
-architectures=STM32
+architectures=STM32F1
 repository=https://github.com/kpatel122/Servo-Speed
 license=MIT
